--- a/style/components/about.scss
+++ b/style/components/about.scss
@@ -1,12 +1,20 @@
 .about {
   padding: 1em;
-  @include grid(2em, center, initial, auto, auto);
   @include md {
     padding: 4em 2em;
   }
-  text-align: center;
-  p {
-    max-width: 500px;
-    margin: auto;
+  .grid {
+    @include grid(2em, initial, initial, auto, auto);
+    text-align: center;
+    video {
+      width: 80%;
+      @include md {
+        width: 100%;
+      }
+    }
+    p {
+      max-width: 500px;
+      margin: auto;
+    }
   }
 }
