--- a/style/components/footer.scss
+++ b/style/components/footer.scss
@@ -1,17 +1,32 @@
 .footer {
-  @include grid(2em, center, center, auto, auto);
   text-align: center;
   min-height: 300px;
   background: $black;
   color: white;
-  padding: 2em 1em;
+  border-top:1px solid $darkBlack;
+  @include grid(1em, initial, initial, auto, auto);
+  .logo {
+    margin: auto;
+  }
+  section {
+    padding: 2em;
+    @include grid(2em, center, center, auto, auto);
+  }
+  // CONTACT
   &__contact-detailes {
     color: white;
     .tel {
-      @include grid(1em, space-between, initial, auto auto, auto);
+      @include grid(1em, initial, initial, auto, auto);
+      @include md {
+        @include grid(1em, space-between, initial, auto auto, auto);
+      }
       text-align: right;
       @extend %fs18;
       @extend %Varela;
     }
+  }
+  &__rights {
+    background: $darkBlack;
+    padding: 1em;
   }
 }
