--- a/style/core.scss
+++ b/style/core.scss
@@ -8,6 +8,8 @@
 @import './components/about.scss';
 @import './components/swiper.scss';
 @import './components/gallery.scss';
+@import './components/staticPage.scss';
+@import './screens/stagePerformer.scss';
 
 #__next,
 .home {
