--- a/style/styleTools.scss
+++ b/style/styleTools.scss
@@ -117,7 +117,7 @@ $gradient: linear-gradient(90deg, $red 15%, $purple 90%);
   font-size: 12px;
 }
 %fs18 {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 24px;
   @include sm {
     line-height: 18px;
@@ -394,4 +394,15 @@ button:disabled {
 }
 .text-shadow {
   text-shadow: 1px 2px 5px black;
+}
+
+.gradient-background-faded {
+  background: rgba(67,31,121,0.67);
+  background: -moz-linear-gradient(left, rgba(67,31,121,0.67) 0%, rgba(218,59,53,0.62) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(67,31,121,0.67)), color-stop(100%, rgba(218,59,53,0.62)));
+  background: -webkit-linear-gradient(left, rgba(67,31,121,0.67) 0%, rgba(218,59,53,0.62) 100%);
+  background: -o-linear-gradient(left, rgba(67,31,121,0.67) 0%, rgba(218,59,53,0.62) 100%);
+  background: -ms-linear-gradient(left, rgba(67,31,121,0.67) 0%, rgba(218,59,53,0.62) 100%);
+  background: linear-gradient(to right, rgba(67,31,121,0.67) 0%, rgba(218,59,53,0.62) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#431f79', endColorstr='#da3b35', GradientType=1 );
 }
