--- a/style/components/staticPage.scss
+++ b/style/components/staticPage.scss
@@ -21,7 +21,12 @@
     &__swiper-container {
       margin: auto;
       height: 500px;
-      max-width: 700px;
+      max-width: 300px;
+      @include md {
+        max-width: 700px;
+      }
+    }
+    &__services {
     }
   }
 }
