--- a/style/components/staticPage.scss
+++ b/style/components/staticPage.scss
@@ -1,6 +1,7 @@
 .static-hero {
   height: 500px;
   background-size: cover;
+  background-position:center; 
   .hero-overlay {
     width: 100%;
     height: 100%;
