--- a/style/components/navbar.scss
+++ b/style/components/navbar.scss
@@ -11,7 +11,7 @@ $menu-tabs-width: 130px;
 .menu-navbar {
   position: sticky;
   top: 0;
-  z-index: 15555;
+  z-index: 155;
 
   &[data-top='true'] {
     .ant-menu {
@@ -67,6 +67,8 @@ $menu-tabs-width: 130px;
 .ant-menu-submenu {
   .ant-menu-sub {
     background: $black !important;
+    box-shadow: 0px 0px 15px 2px $darkBlack;
+    padding: .5em !important;
     &:not(.ant-menu-hidden) {
       @include flex-column();
     }
@@ -85,6 +87,8 @@ $menu-tabs-width: 130px;
     }
   }
   .ant-menu-item {
+    width: 100%;
+
     text-align: right;
     @extend %Varela;
     background: $black;
