--- a/style/core.scss
+++ b/style/core.scss
@@ -8,9 +8,12 @@
 @import './components/about.scss';
 @import './components/swiper.scss';
 @import './components/gallery.scss';
-@import './components/staticPage.scss';
-@import './screens/stagePerformer.scss';
+@import './components/ServicePage.scss';
+@import './screens/static-container.scss';
 @import './components/cardAcardsList.scss';
+@import './components/eventPage.scss';
+@import './components/modal.scss';
+@import './components/recommendation.scss';
 
 #__next,
 .home {
