--- a/style/styleTools.scss
+++ b/style/styleTools.scss
@@ -408,23 +408,31 @@ button:disabled {
 .text-shadow {
   text-shadow: 1px 2px 5px black;
 }
+$rightColorOpacity:0.18;
+$leftColorOpacity:0.37;
 
 .gradient-background-faded {
-  background: rgba(67, 31, 121, 0.67);
-  background: -moz-linear-gradient(left, rgba(67, 31, 121, 0.67) 0%, rgba(218, 59, 53, 0.62) 100%);
+  background: rgba(67, 31, 121, $leftColorOpacity);
+  background: -moz-linear-gradient(left, rgba(67, 31, 121, $leftColorOpacity) 0%, rgba(218, 59, 53, $rightColorOpacity) 100%);
   background: -webkit-gradient(
     left top,
     right top,
-    color-stop(0%, rgba(67, 31, 121, 0.67)),
-    color-stop(100%, rgba(218, 59, 53, 0.62))
+    color-stop(0%, rgba(67, 31, 121, $leftColorOpacity)),
+    color-stop(100%, rgba(218, 59, 53, $rightColorOpacity))
   );
   background: -webkit-linear-gradient(
     left,
-    rgba(67, 31, 121, 0.67) 0%,
-    rgba(218, 59, 53, 0.62) 100%
+    rgba(67, 31, 121, $leftColorOpacity) 0%,
+    rgba(218, 59, 53, $rightColorOpacity) 100%
   );
-  background: -o-linear-gradient(left, rgba(67, 31, 121, 0.67) 0%, rgba(218, 59, 53, 0.62) 100%);
-  background: -ms-linear-gradient(left, rgba(67, 31, 121, 0.67) 0%, rgba(218, 59, 53, 0.62) 100%);
-  background: linear-gradient(to right, rgba(67, 31, 121, 0.67) 0%, rgba(218, 59, 53, 0.62) 100%);
+  background: -o-linear-gradient(left, rgba(67, 31, 121, $leftColorOpacity) 0%, rgba(218, 59, 53, $rightColorOpacity) 100%);
+  background: -ms-linear-gradient(left, rgba(67, 31, 121, $leftColorOpacity) 0%, rgba(218, 59, 53, $rightColorOpacity) 100%);
+  background: linear-gradient(to right, rgba(67, 31, 121, $leftColorOpacity) 0%, rgba(218, 59, 53, $rightColorOpacity) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#431f79', endColorstr='#da3b35', GradientType=1 );
+}
+
+
+.background-provider {
+  position: relative;
+  background: $black;
 }
