--- a/style/core.scss
+++ b/style/core.scss
@@ -10,6 +10,7 @@
 @import './components/gallery.scss';
 @import './components/ServicePage.scss';
 @import './screens/static-container.scss';
+@import './screens/vr-glasss.scss';
 @import './components/cardAcardsList.scss';
 @import './components/eventPage.scss';
 @import './components/modal.scss';
