--- a/style/screens/vr-glasss.scss
+++ b/style/screens/vr-glasss.scss
@@ -37,6 +37,8 @@
         cursor: pointer;
         transition: 300ms ease-out;
         border-radius: 7px;
+        text-shadow: 1px 1px 5px black;
+
         &:hover {
           @extend %fs40;
           z-index: 1;
