--- a/style/core.scss
+++ b/style/core.scss
@@ -18,6 +18,7 @@
 @import './components/layout.scss';
 @import './components/templates/cardDetailes.scss';
 @import './components/BuySellFooter.scss';
+@import './screens/cart.scss';
 
 #__next,
 .home {
