--- a/style/components/BuySellFooter.scss
+++ b/style/components/BuySellFooter.scss
@@ -1,10 +1,13 @@
 .buy-sell-footer {
-    width: 100%;
-    @include flex-row(space-around);
-    margin-top:3em;
-    div {
-        @extend %btnDark;
-        background: $gradient-reverse;
-        box-shadow:0px 0px 5px  $black;
+  width: 100%;
+  @include flex-row(space-around);
+  margin-top: 3em;
+  div {
+    @extend %btnDark;
+    background: $gradient-reverse;
+    box-shadow: 0px 0px 5px $black;
+    &:hover {
+      background: darken($approved, 20%);
     }
+  }
 }
