--- a/style/core.scss
+++ b/style/core.scss
@@ -19,6 +19,7 @@
 @import './components/templates/cardDetailes.scss';
 @import './components/BuySellFooter.scss';
 @import './screens/cart.scss';
+@import './screens/about.scss';
 @import './components/cartIcon.scss';
 
 #__next,
