--- a/style/colors.scss
+++ b/style/colors.scss
@@ -6,7 +6,7 @@ $placeholder: #909090;
 $fieldBorder: #c6c6c6;
 $cement: #a3a49e;
 $disabled: #9b9b9b;
-
+$black-opacity:rgba(black, 0.2);
 $approved: #20dd86;
 $checkbox-native-border: rgba(156, 168, 182, 0.76);
 $devider: #cccccc;
