--- a/style/core.scss
+++ b/style/core.scss
@@ -21,6 +21,7 @@
 @import './screens/cart.scss';
 @import './screens/about.scss';
 @import './components/cartIcon.scss';
+@import './components/payment.scss';
 
 #__next,
 .home {
