--- a/style/components/footer.scss
+++ b/style/components/footer.scss
@@ -1,11 +1,12 @@
 .footer {
+  padding: 20px 0 0 0;
   text-align: center;
   position: relative;
   z-index: 1;
   min-height: 300px;
   background: $black;
   color: white;
-  border-top:1px solid $darkBlack;
+  border-top: 1px solid $darkBlack;
   @include grid(1em, initial, initial, auto, auto);
   .logo {
     margin: auto;
