--- a/style/styleTools.scss
+++ b/style/styleTools.scss
@@ -333,8 +333,8 @@ button:disabled {
     @include grid(1em, initial, initial, auto auto, auto);
   }
   .ant-row {
-    max-width: 100%;
-    width: 300px;
+    max-width: 500px;
+    width: 100%;
     height: 70px;
     @include md {
       height: 100px;
