--- a/style/core.scss
+++ b/style/core.scss
@@ -8,7 +8,7 @@
 @import './components/teaser.scss';
 @import './components/swiper.scss';
 @import './components/gallery.scss';
-@import './components/ServicePage.scss';
+@import './components/servicePage.scss';
 @import './screens/static-container.scss';
 @import './screens/vr-glasss.scss';
 @import './components/cardAcardsList.scss';
